--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,11 @@ header {
 .card-back {
     background-color: rgb(0, 114, 160);
     color: white;
-    text-align: center;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     transform: rotateY(180deg);
 }
 
