--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ header {
     position: relative;
     width: 100%;
     height: 250px;
-    background: url(https://i.postimg.cc/G2rq7YFw/jiji-banner.png);
+    background: url(images/jijibanner.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -92,7 +92,7 @@ header {
     position: relative;
     width: 100%;
     height: 250px;
-    background-image: url(https://i.postimg.cc/85Gn2Lmm/luna-banner.png);
+    background-image: url(images/lunabanner.png);
     background-size: cover;
     background-position: center;
     animation: color-change 5s linear infinite;
