removed white space around video

--- a/blockbuster/styles.css
+++ b/blockbuster/styles.css
@@ -104,6 +104,7 @@ section {
         top: 0;
         width: 100%;
         min-height: 100%;
+        object-fit: fill;
         visibility: visible;
     }
 
