--- a/ministudio1/styles.css
+++ b/ministudio1/styles.css
@@ -119,7 +119,11 @@ section {
     font-family: "Poppins", sans-serif;
     text-align: center;
 }
-
+@media screen and (min-width: 767px) {
+    section {
+        bottom: 10%;
+    }
+}
 /* Design For Tablet */
 @media screen and (max-width: 768px) and (min-width: 481px) {
     #video-vertical {
