--- a/ministudio3/styles.css
+++ b/ministudio3/styles.css
@@ -6,26 +6,39 @@
 
 }
 
-#granim-canvas {
+/* #granim-canvas {
     width: 100%;
     height: 100vh;
+} */
+h1{
+    text-align: center;
+    padding-top: 5%;
+    padding-bottom: 1%;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tap-target {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 16em;
-    height: 16em;
+    width: 20em;
+    height: 26em;
     padding: 1em;
     margin: 1rem auto;
     box-sizing: border-box;
   
-    border-radius: 100%;
+    border-radius: 0%;
   
     font-size: 1.125em;
     text-align: center;
     color: #fff;
+    background-image: url("images/park.jpg");
+    background-size: cover;
     background-color: #29e;
   
     cursor: pointer;
@@ -36,6 +49,7 @@
   }
   
   .tap-target.switch-bg {
+    filter: grayscale(100%);
     background-color: #f40;
   }
   
