--- a/ministudio3/styles.css
+++ b/ministudio3/styles.css
@@ -6,17 +6,13 @@
 
 }
 
-/* #granim-canvas {
-    width: 100%;
-    height: 100vh;
-} */
 h1{
     text-align: center;
     padding-top: 5%;
     padding-bottom: 1%;
 }
 
-main{
+.container{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,14 +21,14 @@ main{
 .tap-target {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
     width: 20em;
     height: 26em;
     padding: 1em;
     margin: 1rem auto;
     box-sizing: border-box;
   
-    border-radius: 0%;
+    border-radius: 2%;
   
     font-size: 1.125em;
     text-align: center;
@@ -60,3 +56,32 @@ main{
   .rotate {
     transform: rotate(180deg);
   }
+
+  canvas{
+    position:absolute;
+    left:0;
+    top:0;
+    z-index:-1;
+  }
+
+  #granim-canvas {
+    width: 100%;
+    height: 100vh;
+}
+
+footer{
+    display: flex;
+    gap: 3rem;
+    position: absolute;
+    bottom: 5%;
+    left: 20px;
+}
+
+footer p{
+    color: white;
+}
+
+footer p a{
+    text-decoration: none;
+    color: beige;
+}
