--- a/ministudio3/styles.css
+++ b/ministudio3/styles.css
@@ -59,29 +59,29 @@ h1{
     user-select: none;
   
     transition: all 0.3s;
-  }
+}
   
-  .tap-target.switch-bg {
+.tap-target.switch-bg {
     filter: grayscale(100%);
     background-color: #f40;
-  }
+}
   
-  .tap-target.large {
+.tap-target.large {
     transform: scale(1.25);
-  }
+}
   
-  .rotate {
+.rotate {
     transform: rotate(180deg);
-  }
+}
 
-  canvas{
+canvas{
     position:absolute;
     left:0;
     top:0;
     z-index:-1;
-  }
+}
 
-  #granim-canvas {
+#granim-canvas {
     width: 100%;
     height: 100vh;
 }
@@ -101,4 +101,40 @@ footer p{
 footer p a{
     text-decoration: none;
     color: beige;
+}
+
+/* Design For Tablet */
+@media screen and (max-width: 768px) and (min-width: 481px) {
+    .container{
+        flex-direction: column;
+    }
+
+    #granim-canvas {
+        width: 100%;
+        height: 225vh;
+    }
+    footer{
+        bottom: -120%;
+    }
+}
+
+/* Design For Mobile */
+@media screen and (max-width: 480px) {
+    .container{
+        flex-direction: column;
+    }
+
+    .tap-target {
+        width: 15em;
+        height: 16em;
+        font-size: 1em;
+    }
+
+    #granim-canvas {
+        width: 100%;
+        height: 225vh;
+    }
+    footer{
+        bottom: -120%;
+    }
 }
