--- a/development/version2/styles.css
+++ b/development/version2/styles.css
@@ -1,36 +1,78 @@
-/* grid container */
-.left-sidebar-grid {
-    display:grid;
-    grid-template-areas:
-        'header'
-        'main-content'
-        'left-sidebar'
-        'footer';
+/* Layout Home Screen */
+.flex-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap:2%;
 }
 
-/* general column padding */
-.left-sidebar-grid > * {
-    padding:1rem;
-}
-
-/* assign columns to grid areas */
-.left-sidebar-grid > .header {
-    grid-area:header;
-    background:#f97171;
-}
-.left-sidebar-grid > .main-content {
-    grid-area:main-content;
+.flex-container > * {
     background:#fff;
+    border-radius:.5em;
+    overflow:hidden;
+    box-shadow:0 5px 10px rgba(0, 0, 0, 25%);
+    margin-bottom: 2%;
+    width: 30%;
+    font-size: 30px;
 }
-.left-sidebar-grid > .left-sidebar {
-    grid-area:left-sidebar;
-    background:#f5d55f;
+.flex-container figure {
+    margin:0;
+    padding:0;
+    display:block;
 }
-.left-sidebar-grid > .footer {
-    grid-area:footer;
-    background:#72c2f1;
+.flex-container img {
+    display:block;
+    height:auto;
+    width: 100%;
+    height: 100%; 
+    object-fit: contain;
 }
 
+.flex-container figcaption {
+    margin:0;
+    padding:.5em 1em;
+    text-align:center;
+    font-style:italic;
+}
+.flex-container figcaption a {
+    text-decoration:none;
+    color: black;
+}
+
+.flex-container figcaption a:hover {
+    text-decoration:underline;
+}
+.flex-container figcaption a:after {
+    content:"";
+    display:block;
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+}
+
+/* Colors */
+#col-1{
+    background-color: #F25F5C;
+}
+#col-2{
+    background-color: #FFE066;
+}
+#col-3{
+    background-color: #70C1B3;
+}
+#col-4{
+    background-color: #F2F3D9;
+}
+#col-5{
+    background-color: #F7A9A8;
+}
+#col-6{
+    background-color: #247BA0;
+}
+
+/* Drag and Drop */
 .draggable { 
     width: 100px; 
     height: 100px; 
@@ -47,13 +89,7 @@
     margin: 10px; 
 }
 
-/* tablet breakpoint */
-@media (min-width:768px) {
-    .left-sidebar-grid {
-        grid-template-columns:repeat(3, 1fr);
-        grid-template-areas:
-            'header header header'
-            'left-sidebar main-content main-content'
-            'footer footer footer';
-    }
+/* Header */
+.header{
+    text-align: center;
 }
