--- a/development/version2/styles.css
+++ b/development/version2/styles.css
@@ -74,22 +74,77 @@
 
 /* Drag and Drop */
 .draggable { 
-    width: 100px; 
-    height: 100px; 
     padding: 0.5em; 
     float: left; 
     margin: 10px 10px 10px 0; 
 }
 
 #droppable { 
-    width: 150px; 
-    height: 150px; 
-    padding: 0.5em; 
+    width: 35vw;
+    height: 100vh;
+    padding: 0 0.5em; 
     float: left; 
-    margin: 10px; 
+    /* margin: 10px;  */
 }
 
 /* Header */
 .header{
     text-align: center;
+}
+
+/* ATS Section */
+.ats {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 7vw;
+    background-color:antiquewhite;
+}
+
+.ats > * {
+    width: 40vw;
+}
+
+.sidebar1{
+    height: 100vh;
+    background-color: #F25F5C;
+    font-size: 30px;
+}
+
+.sidebar2{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #70C1B3;
+    font-size: 30px;
+}
+
+.form-control{
+    height: 70vh;
+    width: 35vw;
+}
+
+.form-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.center {
+    text-align: center;
+}
+
+.btn{
+    border-radius: 10%;
+    background-color: #fff;
+    width: 15vw;
+    height: 5vh;
+}
+
+.btns{
+    width: 35vw;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 20px;
 }
