--- a/development/version2/styles.css
+++ b/development/version2/styles.css
@@ -74,6 +74,7 @@
 
 /* Drag and Drop */
 .draggable { 
+    width: 35vw;
     padding: 0.5em; 
     float: left; 
     margin: 10px 10px 10px 0; 
@@ -92,6 +93,41 @@
     text-align: center;
 }
 
+/* Popup */
+.popup-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.popup {
+    position: absolute;
+    width: 96.5vw;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.popup-content {
+    text-align: center;
+}
+
+.popup .close {
+    position: absolute;
+    top: 2%;
+    right: 5%;
+    font-size: 3rem;
+    cursor: pointer;
+    color: #333;
+}
+
+
+
 /* ATS Section */
 .ats {
     display: flex;
@@ -104,20 +140,35 @@
 
 .ats > * {
     width: 40vw;
+    height: 95vh;
 }
 
 .sidebar1{
-    height: 100vh;
-    background-color: #F25F5C;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 95vh;
+    /* background-color: #F25F5C; */
     font-size: 30px;
 }
 
 .sidebar2{
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    background-color: #70C1B3;
+    height: 95vh;
+    /* background-color: #70C1B3; */
     font-size: 30px;
+}
+
+#text-ats{
+    text-align: left;
+    margin: 5%;
+    line-height: 1.5;
+    width: 30vw;
+}
+
+#text-opt{
+    margin-top: 10%;
 }
 
 .form-control{
