--- a/development/version2/styles.css
+++ b/development/version2/styles.css
@@ -28,28 +28,17 @@
     object-fit: contain;
 }
 
-.flex-container figcaption {
+.flex-container a {
     margin:0;
     padding:.5em 1em;
     text-align:center;
     font-style:italic;
-}
-.flex-container figcaption a {
     text-decoration:none;
     color: black;
 }
 
-.flex-container figcaption a:hover {
+.flex-container a:hover {
     text-decoration:underline;
-}
-.flex-container figcaption a:after {
-    content:"";
-    display:block;
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
 }
 
 /* Colors */
@@ -198,4 +187,32 @@
     display: flex;
     justify-content: space-evenly;
     font-size: 20px;
+}
+
+.fade {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index:1001;
+    opacity:.70;
+}
+
+.light {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    height: 200px;
+    margin-left: -150px;
+    margin-top: -100px;
+    padding: 10px;
+    border: 2px solid #FFF;
+    background: #CCC;
+    z-index:1002;
+    overflow:visible;
 }
