--- a/capstone/case study/styles.css
+++ b/capstone/case study/styles.css
@@ -15,7 +15,9 @@ html {
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
     color: #333;
 }
 nav {
