--- a/capstone/case study/styles.css
+++ b/capstone/case study/styles.css
@@ -18,7 +18,7 @@ body {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
-    color: #333;
+    color: 	rgb(1,48,63);
 }
 nav {
     border-top: 2px solid #333;
@@ -26,7 +26,7 @@ nav {
 nav ul li a {
     text-decoration: none;
     display: block;
-    color:cornflowerblue;
+    color:rgb(2,87,122);
     font-weight: bold;
     border-bottom: 2px solid #333;
     text-align: center;
@@ -35,7 +35,7 @@ nav ul li a {
 }
 
 header, footer {
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(2,169,247);
 }
 
 header, section, footer {
@@ -43,7 +43,11 @@ header, section, footer {
 }
 
 section:nth-child(even){
-    background-color: aliceblue;
+    background-color: #89d6fb;
+}
+
+section:nth-child(odd){
+    background-color: #d4f0fc;
 }
 
 .container {
