--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body {
     background: linear-gradient(to top, #283e51,#0a2342 );
     color: rgb(255, 255, 255);
     transition: all 2s;
+    height: 100vh;
 }
 
 body.switch {
@@ -302,4 +303,37 @@ button.switch {
 
 button.switch:hover {
     background:  rgb(255, 196, 93);
+}
+
+@media screen and (max-width: 768px) and (min-width: 481px) {
+    main {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    main section {
+        width: 80%;
+        margin: 1em auto;
+    }
+
+    button {
+        position: static;
+        margin: 1em auto;
+    }
+}
+
+/* For screens with a maximum width of 480px */
+@media screen and (max-width: 480px) {
+    main{
+        flex-direction: column;
+    }
+
+    main section {
+        width: 90%;
+        margin: 1em auto;
+    }
+
+    button {
+        width: 80%;
+    }
 }
