case study format updates

--- a/capstone/case study/styles.css
+++ b/capstone/case study/styles.css
@@ -59,13 +59,20 @@ h1, h2 {
 }
 
 p {
-    line-height: 1.4em;
+    line-height: 2em;
     margin-bottom: 1em;
 }
 
 ol li {
     margin-bottom: 1em;
 }
+
+/* ul ul li {
+    line-height: 2;
+} */
+li {
+    line-height: 2;
+} 
 
 img {
     margin-bottom: 20px;
